syntax = "proto3";

package task;

service TasksServiceProto {
  rpc GetTaskById (TaskId) returns (Task) {}  
  rpc PaginateTasks (PaginationOptions) returns (Tasks) {}
  rpc CreateTask (CreateTaskInput) returns (Task) {}
  rpc UpdateTask (UpdateTaskInput) returns (Task) {}
  rpc DeleteTask (TaskId) returns (ResponseMessage) {}
}

message TaskId {
  required string id = 1;
}

message PaginationOptions{
  int32 page = 1;
  int32 size = 2;
}

message ResponseMessage{
  string message      = 1;
  bool   error        = 2;
  string errorMessage = 3;
}

message Task {
  string id           = 1;
  string parentId     = 2;
  string title        = 3;
  string description  = 4;
  bool   error        = 5;
  string errorMessage = 6;
}

message CreateTaskInput {
           string parentId    = 1;
  required string title       = 2;
  required string description = 3; 
}

message UpdateTaskInput{
  required string id          = 1;
           string parentId    = 2;
           string title       = 3;
           string description = 4; 
}


message Tasks{
  repeated Task   tasks        = 1;
           bool   error        = 2;
           string errorMessage = 3;
}